# regen

./: .gitignore  Cargo.toml  README.md
src/data/: urls.csv
