[package]
name = "regen"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.6"
rand = "0.8"
rusoto_core = "0.48"
rusoto_s3 = "0.48"
tokio = { version = "1", features = ["full"] } # For async runtime
walkdir = "2"                                  # For directory traversal
futures = "0.3"                                # For async utilities like try_join_all
csv = "1.3.1"
clap = { version = "4.5.41", features = ["derive"] }


[[bin]]
name = "regen"
path = "src/bin/main.rs"

[lib]
name = "regen"
path = "src/lib.rs"
